# leadforge-pro

./: .gitignore  LICENSE  README.md  leads.csv  leads_raw.json  pyproject.toml  scored.json
examples/: sample_leads.json
src/leadforge/: cli.py  config.py  logging.py  models.py
src/leadforge/classification/: engine.py
src/leadforge/enrichment/: dedupe.py  email.py  phone.py  pipeline.py  website.py
src/leadforge/exporter/: csv_exporter.py  json_exporter.py  outreach.py  report.py  sales_reports.py
src/leadforge/scoring/: engine.py  rules.py
src/leadforge/scraper/: __init__.py  base.py
src/leadforge/scraper/providers/: mock.py  places_api.py
src/leadforge/storage/: db.py
src/leadforge/utils/: address.py  cache.py  http.py  rate_limit.py
tests/: test_city_state.py  test_enrichment.py  test_scoring.py
