[project]
name = "leadforge-pro"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "phonenumbers>=8.13",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
leadforge = "leadforge.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
version = "0.3.0"